<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:background="@drawable/ctr_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"
            android:theme="@style/Theme.MyApplication.AppBarOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/accountBtn"
                    android:contentDescription="Account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_anchor="@id/app_bar"
                    app:srcCompat="@drawable/ic_round_person_24"
                    app:fabSize="mini"/>
            </LinearLayout>



        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ns_bg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/app_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:text="Apps"
                        android:textSize="19dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:divider="@drawable/empty_tall_divider"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:showDividers="middle">

                            <ImageView
                                android:contentDescription="First Button"
                                android:id="@+id/firstButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />

                            <ImageView
                                android:contentDescription="Second Button"
                                android:id="@+id/secondButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />

                            <ImageView
                                android:contentDescription="Third Button"
                                android:id="@+id/thirdButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:divider="@drawable/empty_tall_divider"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:showDividers="middle">

                            <ImageView
                                android:contentDescription="Fourth Button"
                                android:id="@+id/fourthButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />

                            <ImageView
                                android:contentDescription="Fifth Button"
                                android:id="@+id/fifthButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />

                            <ImageView
                                android:contentDescription="Sixth Button"
                                android:id="@+id/sixthButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:text="Launch Concat"
                        android:textSize="19dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/ConCat"
                            android:layout_width="@dimen/main_button_width"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_baseline_airplanemode_active_24"
                            android:text="Launch" />

                        <View
                            android:layout_width="16dp"
                            android:layout_height="0dp" />

                        <Button
                            android:id="@+id/customizeBtn"
                            android:layout_width="@dimen/main_button_width"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_baseline_pets_24"
                            android:text="Customize" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:text="System"
                        android:textSize="19dp" />

                    <Button
                        android:id="@+id/systemBtn"
                        android:layout_width="@dimen/main_button_width"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/display"
                        android:layout_centerHorizontal="true"
                        android:text="Some System Buttons" />
                </LinearLayout>

                <Button
                    android:id="@+id/MOSABtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:drawableLeft="@drawable/ic_baseline_timer_24"
                    android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:gravity="left|center_vertical"
                    android:text="ALl apps settings" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#e6ffff"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="HOW TO USE CONCAT?"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/InstructionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Instructions" />

                </LinearLayout>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:background="@drawable/shiba"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Need Help? - Learn More"
                android:textSize="10dp"
                android:gravity="center"
                android:background="@color/white"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/searchAppBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="Something"
        android:text="Search App"
        app:icon="@drawable/ic_search"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>