<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_scrolling"
    android:background="@drawable/ns_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:contentDescription="Recycler View"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/applicationRecyclerView"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>